--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+click==8.1.3
+colorama==0.4.5
+Flask==2.2.2
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+numpy==1.23.3
+packaging==21.3
+pandas==1.5.0
+patsy==0.5.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.2.1
+scipy==1.9.1
+six==1.16.0
+statsmodels==0.13.2
+Werkzeug==2.2.2
+zipp==3.8.1
+gunicorn==20.1.0
